[gd_scene load_steps=6 format=2]

[ext_resource path="res://cell.gd" type="Script" id=1]
[ext_resource path="res://assets/square edged.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/00 - Desktop - tos keypress4.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/00 - Desktop - tos keypress5.ogg" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 4.28996

[node name="cell" type="Control" groups=[
"cell",
]]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reticule_holder" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.03125, 0.03125, 0 )

[node name="TextureButton" type="TextureButton" parent="ColorRect"]
modulate = Color( 1, 1, 1, 0.168627 )
anchor_right = 1.0
anchor_bottom = 1.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="checkspace" type="Area2D" parent="Control" groups=[
"cells",
]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/checkspace"]
shape = SubResource( 2 )
[connection signal="pressed" from="ColorRect/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="area_entered" from="Control/checkspace" to="." method="_on_checkspace_area_entered"]
